# pipex

./: CMakeLists.txt  Makefile
main_part/: ft_free.c  ft_free_char_array.c  ft_mistake.c  ft_my_substr.c  ft_path.c  ft_pipex.c  ft_process1.c  ft_process2.c  ft_putstr.c  ft_split.c  ft_strdup.c  ft_strjoin.c  ft_strlcpy.c  ft_strlen.c  main.c  pipex.h
